knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Error_Log__c/cisco_webex__Webex_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Webex Error Log</label>
    <nameField>
        <displayFormat>WEBEX_ERROR-{0000000000}</displayFormat>
        <label>Webex Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webex Error Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>