knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Error_Log__c/fields/cisco_webex__Error_Category__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Error_Category__c</fullName>
    <label>Error Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>INTERFACE</fullName>
            </value>
            <value>
                <fullName>APEX</fullName>
            </value>
            <value>
                <fullName>BATCH PROCESS</fullName>
            </value>
            <value>
                <fullName>FUTURE</fullName>
            </value>
            <value>
                <fullName>QUEUEABLE</fullName>
            </value>
            <value>
                <fullName>SCHEDULED</fullName>
            </value>
            <value>
                <fullName>TRIGGER</fullName>
            </value>
            <value>
                <fullName>VISUALFORCE</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>