knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Error_Log__c/fields/cisco_webex__Error_Encountered_By__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Error_Encountered_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Error Encountered By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Webex_Error_Log</relationshipName>
    <type>Lookup</type>
</CustomField>