knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Error_Log__c/fields/cisco_webex__Error_Level__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Error_Level__c</fullName>
    <label>Error Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>WARN</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>TRACE</fullName>
            </value>
            <value>
                <fullName>FATAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>