knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Error_Log__c/fields/cisco_webex__Error_Type__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Error_Type__c</fullName>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BUSINESS ERROR</fullName>
            </value>
            <value>
                <fullName>TECHNICAL ERROR</fullName>
            </value>
            <value>
                <fullName>UNDEFINED ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>