knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Error_Log__c/fields/cisco_webex__Full_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Full_Error_Message__c</fullName>
    <label>Full Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>