knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Error_Log__c/fields/cisco_webex__Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Request_Payload__c</fullName>
    <label>Request Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>