knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Error_Log__c/fields/cisco_webex__Webex_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Webex_Component_Name__c</fullName>
    <label>Webex Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>