knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Error_Log__c/fields/cisco_webex__Webex_Interface_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Webex_Interface_Endpoint__c</fullName>
    <label>Webex Interface Endpoint</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>