knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Error_Log__c/fields/cisco_webex__Webex_Interface_Method__c.field-meta.xml
<CustomField>
    <fullName>cisco_webex__Webex_Interface_Method__c</fullName>
    <label>Webex Interface Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONNECT</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>HEAD</fullName>
            </value>
            <value>
                <fullName>OPTIONS</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>TRACE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>