knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/cisco_webex__Webex_Error_Log__c/listViews/cisco_webex__All.listView-meta.xml
<ListView>
    <fullName>cisco_webex__All</fullName>
    <columns>NAME</columns>
    <columns>cisco_webex__Full_Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>